<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".about_us"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main_fragment">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:padding="12dp"
                            android:text="@string/idea"
                            android:textColor="#8725cd"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:padding="12dp"
                                android:id="@+id/Nm4"
                                android:layout_marginLeft="100dp"
                                android:text="@string/detail"
                                android:textColor="@color/wi"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/f1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginStart="21dp"
                                android:layout_marginLeft="21dp"
                                android:layout_marginTop="13dp"
                                android:padding="12dp"
                                android:text="E"
                                android:textColor="@color/colorAccent"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textColor="#8725cd"
                            android:padding="12dp"
                            android:gravity="left"
                            android:text="@string/ide"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/f2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="13dp"
                                android:padding="12dp"
                                android:text="E"
                                android:textColor="@color/colorAccent"
                                android:textSize="20sp"
                                android:textStyle="bold"
                              />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:layout_marginLeft="100dp"
                                android:padding="12dp"
                                android:id="@+id/N1"
                                android:text="@string/personidea"
                                android:textColor="@color/wi"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:padding="12dp"
                            android:text="@string/emai"
                            android:textColor="#8725cd"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/Nn2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="12dp"
                                android:padding="12dp"
                                android:text="@string/emaiil2"
                                android:textColor="@color/wi"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:padding="12dp"
                            android:text="@string/dev"
                            android:textColor="#8725cd"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/f3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="37dp"
                                android:layout_marginTop="13dp"
                                android:padding="12dp"
                                android:text="E"
                                android:textColor="@color/colorAccent"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_marginRight="37dp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:padding="12dp"
                                android:id="@+id/Nm3"
                                android:layout_marginLeft="100dp"
                                android:text="@string/dev2"
                                android:textColor="@color/wi"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:padding="12dp"
                            android:text="@string/emai"
                            android:textColor="#8725cd"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >
                            <TextView
                                android:id="@+id/Nn3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="80dp"
                                android:layout_marginTop="12dp"
                                android:padding="12dp"
                                android:text="@string/emaiil"
                                android:textColor="@color/wi"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>


                    </LinearLayout>

            <!--</androidx.core.widget.NestedScrollView>-->




        </LinearLayout>

        </ScrollView>

    </FrameLayout>



</LinearLayout >